--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,13 +7,13 @@ body {
   background-image: linear-gradient(to left, #ffd149, #ffa000);
 }
 
-header {
+#nav {
   display: grid;
-  grid-template-columns: 5fr 1fr;
-  grid-gap: 5px;
+  place-items: start end;
+  border-bottom: solid 1px rgba(197, 197, 197, 1);
 }
 
-header > nav {
+#nav > nav {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 5px;
@@ -23,8 +23,6 @@ header > nav {
 
 main { 
   margin-top: 0.5rem;
-  border-top: solid 1px rgba(197, 197, 197, 1);
-
 }
 
 h1 {
@@ -43,13 +41,38 @@ h3 {
   margin-bottom: 0.5rem;
 }
 
-.fadeIn {
-  animation: fadeIn linear 2s;
+#landing {
+  margin: 0;
+  height: 100vh;
+  display: grid;
+  place-items: center center;
 }
 
-@keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+#landing-items {
+  margin: 0;
+  display: grid;
+  place-items: center center;
+}
+
+#landing-button {
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  margin-top: 1rem;
+  padding: 5px 40px 5px 40px;
+  
+  background-color: rgb(194, 113, 7);
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+#landing-button:hover {
+  background-color: rgb(167, 99, 10);
+}
+
+#landing-button:active {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 
 a:link {
@@ -97,23 +120,6 @@ a:hover {
   grid-gap: 5px;
 }
 
-#spinner {
-  display: grid;
-  place-items: start center;
-  margin: 5px;
-}
-
-.spinner-2 {
-  width:50px;
-  height:50px;
-  border-radius:50%;
-  border:8px solid;
-  border-color:#ffffff;
-  border-right-color: #ccc0ae;
-  animation: s2 1s infinite linear;
-}
-@keyframes s2 {to{transform: rotate(1turn)}}
-
 @media screen and (max-width: 600px) {
 
   body {  
@@ -141,5 +147,75 @@ a:hover {
     margin: 0
   }
 }
+
+/* Effects Section */
+
+#spinner {
+  display: grid;
+  place-items: start center;
+  margin: 5px;
+}
+
+.spinner-2 {
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  border:8px solid;
+  border-color:#ffffff;
+  border-right-color: #ccc0ae;
+  animation: s2 1s infinite linear;
+}
+@keyframes s2 {to{transform: rotate(1turn)}}
+
+#heading-fadeIn {
+  animation: headingFadeIn linear 2s;
+}
+
+@keyframes headingFadeIn {
+  0% {opacity:0;}
+  50% {opacity:0.5;}
+  100% {opacity:1;}
+}
+
+#catchprhase-fadeIn {
+  animation: catchprhaseFadeIn linear 4s;
+}
+
+@keyframes catchprhaseFadeIn {
+  0% {opacity:0;}
+  50% {opacity:0;}
+  100% {opacity:1;}
+}
+
+#powered-fadeIn {
+  animation: poweredFadeIn linear 6s;
+}
+
+@keyframes poweredFadeIn {
+  0% {opacity:0;}
+  66% {opacity:0;}
+  100% {opacity:1;}
+}
+
+#landing-button-fadeIn {
+  animation: landingFadeIn linear 8s;
+}
+
+@keyframes landingFadeIn {
+  0% {opacity:0;}
+  75% {opacity:0;}
+  100% {opacity:1;}
+}
+
+.fadeIn {
+  animation: fadeIn linear 2s;
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+
 
 
