--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,13 +6,14 @@
   --grid-gap: 5px;
 
   --ruler-colour: rgba(53, 49, 49, 1); 
+
+  --body-height: 90vh;
 }
 
 body {
   font-family: sans-serif;
 
-  margin: 1rem 2rem 1rem 2rem;  
-  height: 100vh;
+  margin: 1rem 2rem 1rem 2rem; 
 
   background-image: linear-gradient(to left, var(--main-colour-light), var(--main-colour));
 }
@@ -33,12 +34,20 @@ h3 {
 }
 
 main { 
-  margin-top: 0.5rem;
+  margin: 0rem;
 }
+
+footer {
+  position: fixed;
+  right: 2rem;
+  bottom: 0;
+}
+
 
 #navBar {
   display: grid;
   grid-template-columns: 5fr 1fr;
+  height: var(--header-height);
 
   border-bottom: solid 1px var(--ruler-colour);
 }
@@ -57,7 +66,7 @@ main {
 
 #centered {
   margin: 0;
-  height: 100vh;
+  height: var(--body-height);
   display: grid;
   place-items: center center;
 }
