--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
 
   margin: 1rem 2rem 1rem 2rem; 
 
