--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -69,7 +69,7 @@ footer {
 
 #navBar > nav {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: var(--grid-gap);
   place-items: end end;
 }
@@ -131,6 +131,19 @@ a:hover {
   border-top: solid 1px var(--ruler-colour);
 }
 
+#settings-grid {
+  display: grid;
+  grid-gap: 20px;
+
+  margin-top: 1rem;
+}
+
+#settings-input {
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+  grid-gap: 5px;
+}
+
 #image-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
@@ -147,7 +160,6 @@ a:hover {
 .image-button,
 .image-button-active {
   border: none;
-  border-radius: 10px;
   outline: none;
   background: none;
   text-decoration: none;
@@ -167,12 +179,6 @@ a:hover {
 .image-button-active {
   box-shadow: inset -2px -2px 5px 5px rgba(206, 9, 9, 0.6),
     inset 2px 2px 3px rgba(0, 0, 0, .6);
-}
-
-#form-buttons {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: var(--grid-gap);
 }
 
 @media screen and (max-width: 600px) {
