--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -53,7 +53,6 @@ footer {
   bottom: 0;
 }
 
-
 #navBar {
   display: grid;
   grid-template-columns: 5fr 1fr;
@@ -88,6 +87,7 @@ footer {
 }
 
 #app-button,
+#disabled-app-button,
 #text-button {
   border: none;
   border-radius: 10px;
@@ -98,7 +98,8 @@ footer {
                 inset -2px -2px 3px rgba(0, 0, 0, .6);
 }
 
-#app-button {
+#app-button,
+#disabled-app-button {
   padding: 5px 40px 5px 40px;
 }
 
