add the app to the navbar

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -68,7 +68,7 @@ footer {
 
 #navBar > nav {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: var(--grid-gap);
   place-items: end end;
 }
