--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,9 +5,12 @@
 
   --grid-gap: 5px;
 
-  --ruler-colour: rgba(53, 49, 49, 1);
+  --ruler-color: rgba(53, 49, 49, 1);
 
   --body-height: 90vh;
+
+  --header-height: 3rem;
+  --footer-height: 6rem;
 }
 
 @font-face {
@@ -44,13 +47,38 @@ p > span#title {
 }
 
 main {
-  margin: 0 0 4rem 0;
+  display: grid;
+  z-index: 2;
+  padding-top: 1rem;
+  padding-bottom: calc(var(--footer-height) + var(--header-height) + 6rem)
 }
 
 footer {
-  position: fixed;
-  right: 2rem;
-  bottom: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: calc(100vw - 4rem);
+  height: var(--footer-height);
+  position: fixed; 
+  bottom: 0; 
+  background-image: linear-gradient(to left, var(--main-colour-light), var(--main-colour));
+
+  z-index: 1;
+  border-top: solid 1px var(--ruler-color);
+}
+
+footer #source {
+  display: grid;
+  place-items: start start;
+}
+
+footer #copyright {
+  display: grid;
+  place-items: start center;
+}
+
+footer #cc {
+  display: grid;
+  place-items: start end;
 }
 
 #navBar {
@@ -58,7 +86,9 @@ footer {
   grid-template-columns: 5fr 1fr;
   height: var(--header-height);
 
-  border-bottom: solid 1px var(--ruler-colour);
+  padding: 0 0 0.5rem 0;
+
+  border-bottom: solid 1px var(--ruler-color);
 }
 
 #navBar > #title {
@@ -88,11 +118,12 @@ footer {
 
 #app-button,
 #disabled-app-button,
-#text-button {
+#text-button,
+#login-button {
   border: none;
   border-radius: 10px;
   outline: none;
-
+  margin-bottom: 3px;
   background-color: var(--main-colour-dark);
   box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
                 inset -2px -2px 3px rgba(0, 0, 0, .6);
@@ -107,13 +138,20 @@ footer {
   padding: 5px 10px 5px 10px;
 }
 
+#login-button {
+  margin-top: 1rem;
+  padding: 5px 10px 5px 10px;
+}
+
 #app-button:hover,
-#text-button:hover {
+#text-button:hover,
+#login-button:hover {
   background-color: var(--main-colour);
 }
 
 #app-button:active,
-#text-button:active {
+#text-button:active,
+#login-button:active {
   box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
                 inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
@@ -136,7 +174,6 @@ a:hover {
   display: grid;
   grid-template-columns: 1fr 10fr;
   padding: 1rem 0 0 0;
-  margin-top: 1rem;
 }
 
 #login-form label {  
@@ -151,19 +188,6 @@ a:hover {
   white-space: nowrap;
   overflow: hidden;
   resize: none;
-}
-
-#settings-grid {
-  display: grid;
-  grid-gap: 20px;
-
-  margin-top: 1rem;
-}
-
-#settings-input {
-  display: grid;
-  grid-template-columns: 1fr 10fr;
-  grid-gap: 5px;
 }
 
 #image-grid {
