--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,8 +7,6 @@
 
   --ruler-color: rgba(53, 49, 49, 1);
 
-  --body-height: 90vh;
-
   --header-height: 3rem;
   --footer-height: 6rem;
 }
@@ -26,6 +24,10 @@ body {
   background-image: linear-gradient(to left, var(--main-colour-light), var(--main-colour));
 }
 
+h1, h2, h3, p {
+  line-height: 1.5
+}
+
 h1 {
   font-family: 'Lucida Handwriting', 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
   font-size: 2rem;
@@ -33,13 +35,19 @@ h1 {
 }
 
 h2 {
-  font-size: 1rem;
+  font-size: 1.7rem;
   margin: 0 0 1rem 0
 }
 
 h3 {
   font-size: 1.5rem;
   margin: 0
+}
+
+p {
+  font-size: 1rem;
+  margin: 0 0 1rem 0;
+  padding: 0
 }
 
 p > span#title {
@@ -49,8 +57,9 @@ p > span#title {
 main {
   display: grid;
   z-index: 2;
-  padding-top: 1rem;
-  padding-bottom: calc(var(--footer-height) + var(--header-height) + 6rem)
+  padding: 1rem 0 1rem 0;
+  min-height: calc(100vh - var(--header-height) - var(--footer-height) - 6rem);
+  /* padding-bottom: calc(var(--footer-height) + var(--header-height) + 6rem) */
 }
 
 footer {
@@ -58,11 +67,12 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
   width: calc(100vw - 4rem);
   height: var(--footer-height);
-  position: fixed; 
+  padding-top: 1rem;
+  /* position: fixed; 
   bottom: 0; 
   background-image: linear-gradient(to left, var(--main-colour-light), var(--main-colour));
 
-  z-index: 1;
+  z-index: 1; */
   border-top: solid 1px var(--ruler-color);
 }
 
@@ -105,7 +115,7 @@ footer #cc {
 
 #centered {
   margin: 0;
-  height: var(--body-height);
+  height: 20vw;
   display: grid;
   place-items: center center;
 }
