--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -192,12 +192,16 @@ a:hover {
 }
 
 #login-form input {  
-  display: grid;
-  place-items: start start;
   padding: 10px;
   white-space: nowrap;
   overflow: hidden;
   resize: none;
+}
+
+#login-form textarea {  
+  padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 #image-grid {
