--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -103,7 +103,7 @@ header {
   grid-template-columns: 1fr 1fr 1fr;
   height: var(--header-height);
   width: 100%;
-  padding: 0 10rem 0 1rem;
+  padding: 0;
   background-color: var(--main-colour);
   z-index: 1;
   border-bottom: solid 1px var(--ruler-color);
@@ -130,13 +130,18 @@ header > nav {
 #centered {
   display: grid;
   place-items: center center;
-  margin: 0;
 }
 
-#centered-items {
+#landing {
   display: grid;
-  place-items: center center;
-  margin: 0;
+  height: 100vh;
+  justify-items: center;
+  align-items: center;
+}
+
+h1.landing {
+  display: grid;
+  justify-items: center;
 }
 
 #app-button,
